service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: web-app
  ports:
    - port: 80
      targetPort: 80
